--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <div id="wrapper">      
       <h1>Artist Finder!</h1>
-
+      </br>
       <form>
         Artist Name: <input type="text" name="artist" />
       </form>
+      <button>Submit</button>
     </div>
   </body>
 </html>
