--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form>
         Artist Name: <input type="text" name="artist" />
       </form>
-      <button>Submit</button>
+      <button><a id="submit" href="#">Submit</button>
     </div>
   </body>
 </html>
