--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Dominic Cerminara-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,9 +13,10 @@
       <h1>Artist Finder!</h1>
       </br>
       <form>
-        Artist Name: <input type="text" name="artist" />
+        Artist Name: <input type="text" id="artist" />
       </form>
-      <button><a id="submit" href="#">Submit</button>
+      <button id="submit">Submit</button>
+    <div id="artistpic"></div>
     </div>
   </body>
 </html>
