Updated styling and added link to similar artist to DOM

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   </head>
   
   <body>
+    <h1>Artist Finder!</h1>
     <div id="wrapper">      
-      <h1>Artist Finder!</h1>
-      </br>
+      <p>Enter one of your favorite artists to discover new music!</p>
       <form>
         Artist Name: <input type="text" id="artist" />
       </form>
       <button id="submit">Submit</button>
-    <div id="artistpic"></div>
+      <div id="artistpic"></div>
+      <div id="artistinfo"></div>
     </div>
   </body>
 </html>
