Added Twitter, css work

--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project 1</title>
+    <title>Artist Finder</title>
     <link rel="stylesheet" href="./stylesheets/style.css" type="text/css" />
     <script type="text/javascript" src="./javascripts/jquery.js"></script>
     <script type="text/javascript" src="./javascripts/application.js"></script>
   </head>
   
   <body>
-    <h1>Artist Finder!</h1>
+    <h1>Artist Finder</h1>
     <div id="wrapper">      
-      <p>Enter one of your favorite artists to discover new music!</p>
+      <p>Enter one of your favorite artists to discover new artists similar to them!</p>
       <form>
         Artist Name: <input type="text" id="artist" />
       </form>
-      <button id="submit">Submit</button>
-      <div id="artistpic"></div>
+      <img src="images/submit.png" id="submit">
       <div id="artistinfo"></div>
+    </div>
+    <div id ="footer">
+      Created by <a href="http://github.com/domcerminara" target="_blank">domcerminara</a>
+      </br>  
+      <a href="http://www.twitter.com/domcerminara" target="_blank"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Follow domcerminara on Twitter"/></a>
     </div>
   </body>
 </html>
