--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </form>
       <img src="images/submit.png" id="submit">
       <div id="artistinfo"></div>
+      <div id="error"></div>
     </div>
     <div id ="footer">
       Created by <a href="http://github.com/domcerminara" target="_blank">domcerminara</a>
